# AI-PYTHON-TUTOR

./: .env  app.py  config.py  core.py  exercises.py  lessons.py  main.py  progress_student.json  progress_tracker.py  requirements.txt  visualizer.py
AI-PYTHON-TUTOR-main/: .gitignore  PKG-INFO  README.md  SOURCES.txt  SRS.md  history_latest.json  index.html  progress_student.json  pyproject.toml  requires.txt
